blocks/root/root.css
@import url(./__header/root__header.css);
@import url(./__lead/root__lead.css);
@import url(./__footer/root__footer.css);

.root {
  background-color: #2a2c2f;
  max-width: 1280px;
  min-width: 320px;
  margin: 0 auto;
  color: #fff;
  font-family: "Inter", "Arial", "Helvetica", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-textsize-adjust: 100%;
  -ms-textsize-adjust: 100%;
  -moz-textsize-adjust: 100%;
  text-rendering: optimizeLegibility;
}

